--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
-    <header><img src="favicon.png" alt="" class="img1"><h4 class="h">Christmas</h4><nav class="nav1"><a href="" class="camp">Home</a><a href="">Celebrate</a><a href="">Gifts</a><a href="">New</a><a href=""><i class="fa-regular fa-moon"></i></a></nav></header>
+    <header><div style="display: flex; align-items: center;"><img src="favicon.png" alt="" class="img1"><h4 class="h">Christmas</h4></div><nav class="nav1"><a href="" class="camp">Home</a><a href="">Celebrate</a><a href="">Gifts</a><a href="">New</a><a href=""><i class="fa-regular fa-moon"></i></a></nav></header>
     <main><div class="img2"><img src="home.png" alt="" class="image"></div><div class="div2"><h1>Merry Christmas and Happy New Year</h1><p>Christmas and a new year is about to begin all good wishes and success.</p> <button class="btn1">Get Started</button></div>
     
     </main>
@@ -70,10 +70,10 @@
     <div class="solo"><div class="imu"><img src="new3.png" alt="" class="dulu"></div><h3>$75</h3><h6>Sledge</h6></div>
 
    </div>
-   <div class="large">
+  <center> <div class="large">
     <div class="last"><h2>Send Good Wishes!</h2><input type="text" placeholder="write your message"><br><button>Send message</button></div>
     <div><img src="message.png" alt="" class="end"></div>
-   </div>
+   </div></center>
 
     <footer>
         <div><h4>charismas</h4><p>this charitmas give a lot of love</p></div>
